--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "grunt-dom-munger",
+  "name": "grunt-dom-munger-updated",
   "description": "Read and manipulate HTML with CSS selectors. Ex. read <script> tags from your html.  Remove nodes, add nodes, and more.",
   "version": "3.4.0",
-  "homepage": "https://github.com/cgross/grunt-dom-munger",
+  "homepage": "https://github.com/cgross/grunt-dom-munger-updated",
   "author": {
     "name": "Chris Gross",
     "email": "schtoo@schtoo.com"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/cgross/grunt-dom-munger.git"
+    "url": "git://github.com/cgross/grunt-dom-munger-updated.git"
   },
   "bugs": {
-    "url": "https://github.com/cgross/grunt-dom-munger/issues"
+    "url": "https://github.com/cgross/grunt-dom-munger-updated/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/cgross/grunt-dom-munger/blob/master/LICENSE-MIT"
+      "url": "https://github.com/cgross/grunt-dom-munger-updated/blob/master/LICENSE-MIT"
     }
   ],
   "main": "Gruntfile.js",
@@ -30,13 +30,13 @@
   "devDependencies": {
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt": "~0.4.1",
+    "grunt": ">=0.4.1",
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-nodeunit": "~0.3.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.1"
+    "grunt": ">=0.4.1"
   },
   "keywords": [
     "gruntplugin",
